round6-bootcamp/force-app/main/default/objects/Candidato__c/fields/Aceite__c.field-meta.xml
<CustomField>
    <fullName>Aceite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usado para informar se o candidato aceitou o desafio</description>
    <inlineHelpText>Usado para informar se o candidato aceitou o desafio</inlineHelpText>
    <label>Aceite</label>
    <type>Checkbox</type>
</CustomField>