round6-bootcamp/force-app/main/default/objects/Candidato__c/fields/Cep__c.field-meta.xml
<CustomField>
    <fullName>Cep__c</fullName>
    <label>Cep</label>
    <length>9</length>
    <type>Text</type>
</CustomField>