round6-bootcamp/force-app/main/default/objects/Candidato__c/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>Data que o candidato nasceu registrado na certidão de nascimento. (usada no calculo de idade)</description>
    <inlineHelpText>Data que o candidato nasceu registrado na certidão de nascimento.</inlineHelpText>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>