round6-bootcamp/force-app/main/default/objects/Candidato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pontuacao__c</columns>
    <columns>Idade__c</columns>
    <columns>ValorDaDivida__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>